# Glitter_fork

./: .gitignore  .gitmodules  CMakeLists.txt
Glitter/Headers/: ChernoShader.hpp  glitter.hpp
Glitter/Shaders/: Basic.shader  basic_cherno.shader  echo_shader.frag  echo_shader.vs  lamp.shader  lighting.shader  model_loading.shader  textures.frag  textures.vs
Glitter/Sources/: Camera.h  ChernoShader.hpp  ChernoShaderV2.cpp  ChernoShaderV2.h  Cherno_Texture.cpp  Cherno_Texture.h  DraftFunctions.h  FileHandler.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.h  Model.h  Render.cpp  Render.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
Glitter/Sources/imgui/: imgui_impl_glfw_gl3.cpp  imgui_main.cpp
